--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -4,17 +4,29 @@
 .navbar
   &-container
     max-width: 1140px
+    min-height: 100px
+    display: flex
+    align-items: center
+    margin-bottom: 36px
   &-top
+    min-width: 100%
     display: flex
     justify-content: space-between
     align-items: center
   &-menu
     display: flex
-    list-style-type: none
     align-items: center
     justify-content: space-between
+    &__main
+      display: flex
+      list-style-type: none
+      align-items: center
+      justify-content: space-between
+      margin: 0 50px 0 0
+      padding: 0
     &_item
       margin-right: 40px
+      max-width: fit-content
     &__link
       font-family: Open Sans
       font-style: normal
@@ -24,3 +36,14 @@
       color: $primary
       text-decoration: none
       margin-right: 40px
+  &-exit
+    font-family: Open Sans
+    font-style: normal
+    font-weight: bold
+    font-size: 16px
+    line-height: 22px
+    color: $secondary
+    border: 2px solid $secondary
+    padding: 13px 24px
+    border-radius: 8px
+    text-decoration: none
