--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,12 @@
 // Подключение переменных
 @import 'variables'
+// Подключение шрифтов
+@import 'fonts'
 // Подключение базовых настроек
 @import 'settings'
 // Подключение normalize
 @import 'normalize'
 // Стили для блока header
 @import 'blocks/_header'
+// Стили для блока main
+@import 'blocks/_main'
