added: adaptive layout

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,9 +6,20 @@ body
 .container
   max-width: 1110px
   margin: auto
+  &-navbar
+    max-width: 1140px
+    min-height: 100px
+    display: flex
+    align-items: center
+    margin-bottom: 36px
   &-main
-    max-width: 1280px
+    min-width: 95%
+    width: 1280px
     height: 700px
+    padding: 0
+    margin: 0 auto
+    overflow: hidden
     position: relative
-    background: url("../img/image-main.png") 100% 100% no-repeat
-    background-size: contain
+    /*position: relative*/
+    /*background: url("../img/image-main.png") 100% 100% no-repeat*/
+    /*background-size: contain*/
