--- a/sass/blocks/_main.sass
+++ b/sass/blocks/_main.sass
@@ -1,14 +1,28 @@
 .main
+  max-width: 100%
   &-block
-    max-width: 652px
-    max-height: 592px
+    max-width: 710px
+    height: 100%
     position: absolute
-    top: 62px
-    left: 107px
-    bottom: 46px
+    top: 0
+    left: 0
+    bottom: 0
     display: flex
     flex-direction: column
     align-items: flex-start
+    padding-top: 62px
+    padding-left: 107px
+    padding-bottom: 46px
+    display: flex
+    flex-direction: columns
+  &-image
+    width: 100%
+    height: 100%
+    object-fit: cover
+    position: absolute
+    top: 0
+    left: 0
+    object-position: 65% top
   &-badge
     font-family: Open Sans, sans-serif
     font-style: normal
@@ -22,7 +36,7 @@
     border-radius: 2000px
     text-decoration: none
   &-title
-    font-family: 'HK Grotesk Bold', sans-serif
+    font-family: 'Open Sans', sans-serif
     font-style: normal
     font-weight: 700
     font-size: 56px
