added: adaptive layout

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -90,7 +90,7 @@
     &-button
       padding: 15px 41px
     &-menu
-      width: 446px
+      width: 450px
       margin: 40px 0 0 0
       &__item
         &:nth-child(2)
@@ -187,7 +187,8 @@
       margin: 14px 8px 31px
       height: 77px
       &__item
-        margin: 6px
+        &:nth-child(2)
+          margin: 1px -6px 2px 7px
       &__image
         width: 24px
         height: 24px
