--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -20,6 +20,12 @@ body
     margin: 0 auto
     overflow: hidden
     position: relative
-    /*position: relative*/
-    /*background: url("../img/image-main.png") 100% 100% no-repeat*/
-    /*background-size: contain*/
+  &-collection
+    max-width: 1140px
+    height: 490px
+    padding: 0
+    margin: 120px auto 100px
+    overflow: hidden
+    position: relative
+    display: flex
+    flex-direction: row
