--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/_header'
 // Стили для блока main
 @import 'blocks/_main'
+// Стили для блока collection
+@import 'blocks/_collection'
 // Подключение стилей для адаптива
 @import 'media'
