--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -12,6 +12,11 @@ body
     display: flex
     align-items: center
     margin-bottom: 36px
+    &__bottom
+      height: 100%
+      width: 100%
+      padding-top: 22px
+      background-color: $primary
   &-main
     min-width: 89%
     width: 1280px
