--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -31,6 +31,9 @@
     display: flex
     align-items: center
     justify-content: space-between
+    flex-direction: column
+    &__top
+      display: flex
     &__main
       display: flex
       list-style-type: none
@@ -61,3 +64,14 @@
     padding: 11px 20px
     border-radius: 8px
     text-decoration: none
+  &-bottom
+    display: none
+    &--visible
+      display: block
+      height: 92%
+      position: fixed
+      top: 85px
+      left: 0
+      right: 0
+      bottom: 0
+      overflow: hidden
