fixed: layout errors

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -70,6 +70,16 @@
       min-height: 64px
       margin: 8px auto 30px
       max-width: 84%
+      &__bottom
+        height: 100%
+        width: 100%
+        min-height: 100%
+        min-width: 100%
+        display: flex
+        align-items: flex-start
+        justify-content: center
+        padding-top: 22px
+        background-color: $primary
     &-main
       max-height: 626px
     &-collection
