--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -34,6 +34,7 @@
     flex-direction: column
     &__top
       display: flex
+      flex-direction: row
     &__main
       display: flex
       list-style-type: none
