added: trends section

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -34,3 +34,12 @@ body
     position: relative
     display: flex
     flex-direction: row
+  &-trends
+    max-width: 1131px
+    height: 1135px
+    padding: 0
+    margin: 145px auto
+    overflow: hidden
+    position: relative
+    display: flex
+    flex-direction: column
