--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'blocks/_main'
 // Стили для блока collection
 @import 'blocks/_collection'
+// Стили для блока trends
+@import 'blocks/_trends'
 // Подключение стилей для адаптива
 @import 'media'
