--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -18,8 +18,8 @@ body
       padding-top: 22px
       background-color: $primary
   &-main
-    min-width: 89%
-    width: 1280px
+    max-width: 1280px
+    width: 89%
     height: 700px
     padding: 0
     margin: 0 auto
@@ -35,9 +35,9 @@ body
     display: flex
     flex-direction: row
   &-trends
-    max-width: 1131px
-    height: 1135px
-    padding: 0
+    max-width: 1191px
+    min-height: 1135px
+    padding: 0 30px
     margin: 145px auto
     overflow: hidden
     position: relative
