--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -50,7 +50,7 @@
         margin: 0 0 18px 0
   .card
     &-item
-      max-width: 220px
+      /*max-width: 220px*/
       max-height: 441px
       margin-bottom: 50px
       margin-right: 12px
