--- a/sass/blocks/_trends.sass
+++ b/sass/blocks/_trends.sass
@@ -22,6 +22,10 @@
       flex-direction: row
       justify-content: space-between
       align-items: center
+      list-style-type: none
+      padding: 0
+      margin: 0
+      cursor: pointer
       &-item
         font-weight: normal
         font-style: normal
@@ -29,13 +33,15 @@
         line-height: 25px
         color: $primary
         text-decoration: none
-        &:first-child
+        &--accent
           font-weight: bold
   &-cards
-    display: flex
+    display: none
     flex-direction: row
     flex-wrap: wrap
     justify-content: space-between
+    &--visible
+      display: flex
 .card
   &-item
     max-width: 261px
@@ -43,6 +49,9 @@
     margin-bottom: 50px
     margin-right: 1px
   &-image
+    height: 350px
+    min-width: 260px
+    object-fit: cover
     &__wide, &__normal, &__narrow
       max-width: 100%
       border-radius: 8px
