--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -50,12 +50,23 @@
         margin: 0 0 18px 0
   .card
     &-item
-      /*max-width: 220px*/
       max-height: 441px
       margin-bottom: 50px
       margin-right: 12px
     &-title
       font-size: 22px
+@media (max-width: 1148px)
+  .card
+    &-item
+      /*max-width: 245px*/
+@media (max-width: 1100px)
+  .card
+    &-item
+      /*max-width: 235px*/
+@media (max-width: 1052px)
+  .card
+    &-item
+      /*max-width: 220px*/
 @media (max-width: 992px)
   .navbar
     &-menu
@@ -74,14 +85,18 @@
       margin: 0 0 46px 0
   .card
     &-item
-      max-width: 190px
+      /*max-width: 220px*/
       max-height: 441px
       margin-bottom: 50px
       margin-right: 0
+@media (max-width: 954px)
+  .card
+    &-item
+      /*max-width: 195px*/
 @media (max-width: 882px)
   .card
     &-item
-      max-width: 170px
+      max-width: 230px
       max-height: 441px
       margin-bottom: 50px
     &-title
@@ -318,9 +333,15 @@
       padding-right: 0
   .card
     &-item
-      max-width: 183px
-      max-height: 441px
-      width: 100%
+      /*max-width: 183px*/
+      height: 441px
+      width: 45%
+    &-image
+      &__wide, &__normal
+        display: none
+      &__narrow
+        display: flex
+        height: 100%
     &-info
       justify-content: flex-start
       padding: 16px 5px 1px 5px
@@ -339,9 +360,11 @@
       /*justify-content: space-between*/
   .card
     &-item
-      max-width: 140px
-      max-height: 441px
-      width: 100%
+      /*max-width: 140px*/
+      max-height: 360px
+      width: 45%
+    &-image
+      max-height: 285px
 @media (max-width: 320px)
   .container
     max-width: 100%
@@ -431,6 +454,7 @@
         display: none
       &__narrow
         display: flex
+        height: 171px
     &-info
       padding: 12px 0
     &-title
