--- a/sass/blocks/_trends.sass
+++ b/sass/blocks/_trends.sass
@@ -50,7 +50,8 @@
     margin-right: 1px
   &-image
     height: 350px
-    min-width: 260px
+    /*min-width: 260px*/
+    width: 100%
     object-fit: cover
     &__wide, &__normal, &__narrow
       max-width: 100%
