added: reviews with slider

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -43,3 +43,13 @@ body
     position: relative
     display: flex
     flex-direction: column
+  &-reviews
+    max-width: 800px
+    min-height: 389px
+    padding: 0
+    margin: -95px auto 80px
+    overflow: hidden
+    position: relative
+    display: flex
+    flex-direction: column
+    align-items: center
