--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'blocks/_collection'
 // Стили для блока trends
 @import 'blocks/_trends'
+// Стили для блока reviews
+@import 'blocks/_reviews'
 // Подключение стилей для адаптива
 @import 'media'
