--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -18,6 +18,8 @@
       letter-spacing: 0.133333px
       color: $primary
       margin-bottom: 28px
+      &--normal, &--narrow
+        display: none
     &__sign
       font-family: 'HK-Grotesk-Bold', sans-serif
       font-style: normal
@@ -28,6 +30,8 @@
       letter-spacing: 0.2px
       color: $primary
 .swiper
+  &-container
+    width: 100%
   &-pagination
     bottom: 0
     &-bullets
