added: history section

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -244,7 +244,7 @@
       padding-top: 10px
   .reviews
     &-slider
-      &__avatar
+      &-avatar
         margin-bottom: 6px
       &__text
         font-style: normal
@@ -386,7 +386,7 @@
       margin-bottom: 4px
   .reviews
     &-slider
-      &__avatar
+      &-avatar
         width: 70px
         height: 81px
         margin-bottom: 2px
@@ -532,7 +532,7 @@
       padding: 0 0 10px 0
   .reviews
     &-slider
-      &__avatar
+      &-avatar
         margin-bottom: -8px
       &__text
         font-style: normal
