--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'blocks/_trends'
 // Стили для блока reviews
 @import 'blocks/_reviews'
+// Стили для блока history
+@import 'blocks/_history'
 // Подключение стилей для адаптива
 @import 'media'
