--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -53,3 +53,14 @@ body
     display: flex
     flex-direction: column
     align-items: center
+  &-history
+    max-width: 1150px
+    min-height: 606px
+    padding: 0
+    margin: 65px auto 80px
+    overflow: hidden
+    position: relative
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: end
