--- a/sass/blocks/_history.sass
+++ b/sass/blocks/_history.sass
@@ -1,4 +1,7 @@
 .history
+  &-swiper
+    &-slide
+      width: 340px
   &-info
     min-height: 485px
     display: flex
@@ -50,6 +53,7 @@
         width: 56px
         height: 56px
   &-cards
+    width: 677px
     min-height: 475px
     display: flex
     flex-direction: row
@@ -61,6 +65,8 @@
       height: 475px
       position: relative
       /*margin-right: 18px*/
+      &:first-child
+        margin-right: 18px
     &__image
       &--normal, &--narrow
         display: none
@@ -94,3 +100,16 @@
       text-decoration: none
       margin: 0 40px 20px 22px
       color: $secondary
+  &-slider
+    width: 686px
+    height: 450px
+    margin: 0 0 0 10px
+    &__item
+      /*max-width: 710px*/
+      width: 100%
+      height: 100%
+      position: relative
+      border-radius: 8px
+      overflow: hidden
+      display: flex
+      justify-content: flex-end
