added: history section adaptive layout 768px

--- a/sass/blocks/_history.sass
+++ b/sass/blocks/_history.sass
@@ -32,6 +32,10 @@
       letter-spacing: 0.2px
       color: $primary
       margin: 22px 0 10px
+      &--normal, &--narrow
+        display: none
+      &--wide
+        display: flex
     &-text
       font-style: normal
       font-weight: normal
