--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -127,6 +127,11 @@
       min-height: 415px
       padding: 0
       margin: -113px auto 80px
+    &-history
+      width: 728px
+      flex-direction: column
+      justify-content: space-between
+      align-items: center
   .navbar
     position: fixed
     top: 0
@@ -260,6 +265,40 @@
   .swiper
     &-pagination
       bottom: 7px
+  .history
+    &-info
+      width: 100%
+      align-items: center
+      padding: 80px 0 0 0
+      &-title
+        margin: 19px 0 2px
+        &--wide, &--narrow
+          display: none
+        &--normal
+          display: flex
+      &-text
+        text-align: center
+        margin-bottom: 36px
+        &--wide, &--narrow
+          display: none
+        &--normal
+          display: flex
+    &-cards
+      max-width: 682px
+      padding: 0
+      margin: -73px 0 0 0
+      &__item
+        width: 332px
+      &__image
+        &--wide, &--narrow
+          display: none
+        &--normal
+          display: flex
+      &__legend
+        width: 322px
+  .history
+    &-slider
+      margin: 0
 @media (max-width: 767px)
   .container
     &-reviews
@@ -326,7 +365,7 @@
       padding: 0
       max-width: 100%
       display: flex
-      justify-content: end
+      justify-content: flex-end
       align-items: center
     &-title
       font-size: 32px
@@ -549,3 +588,17 @@
       bottom: 0
 @media only screen and (max-device-height: 750px) and (orientation: landscape)
   .container
+    &-navbar
+      height: 100%
+      &__bottom
+        overflow: scroll
+  .navbar
+    &-menu
+      overflow-y: scroll
+      &__item
+        margin-bottom: 15px
+    &-bottom
+      &--visible
+        height: 100%
+        top: 62px
+        overflow: scroll
