--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,6 +11,8 @@
       margin: 120px auto 100px
       flex-direction: column
       align-items: center
+    &-history
+      max-width: 90%
   .navbar
     &-menu
       &__main
@@ -68,6 +70,12 @@
     &-item
       /*max-width: 220px*/
 @media (max-width: 992px)
+  .container
+    &-history
+      width: 728px
+      flex-direction: column
+      justify-content: space-between
+      align-items: center
   .navbar
     &-menu
       &__main
@@ -89,6 +97,40 @@
       max-height: 441px
       margin-bottom: 50px
       margin-right: 0
+  .history
+    &-info
+      width: 100%
+      align-items: center
+      padding: 80px 0 0 0
+      &-title
+        margin: 19px 0 2px
+        &--wide, &--narrow
+          display: none
+        &--normal
+          display: flex
+      &-text
+        text-align: center
+        margin-bottom: 36px
+        &--wide, &--narrow
+          display: none
+        &--normal
+          display: flex
+    &-cards
+      max-width: 682px
+      padding: 0
+      margin: -73px 0 0 0
+      &__item
+        width: 332px
+      &__image
+        &--wide, &--narrow
+          display: none
+        &--normal
+          display: flex
+      &__legend
+        width: 322px
+  .history
+    &-slider
+      margin: 0
 @media (max-width: 954px)
   .card
     &-item
@@ -127,11 +169,6 @@
       min-height: 415px
       padding: 0
       margin: -113px auto 80px
-    &-history
-      width: 728px
-      flex-direction: column
-      justify-content: space-between
-      align-items: center
   .navbar
     position: fixed
     top: 0
@@ -265,45 +302,14 @@
   .swiper
     &-pagination
       bottom: 7px
-  .history
-    &-info
-      width: 100%
-      align-items: center
-      padding: 80px 0 0 0
-      &-title
-        margin: 19px 0 2px
-        &--wide, &--narrow
-          display: none
-        &--normal
-          display: flex
-      &-text
-        text-align: center
-        margin-bottom: 36px
-        &--wide, &--narrow
-          display: none
-        &--normal
-          display: flex
-    &-cards
-      max-width: 682px
-      padding: 0
-      margin: -73px 0 0 0
-      &__item
-        width: 332px
-      &__image
-        &--wide, &--narrow
-          display: none
-        &--normal
-          display: flex
-      &__legend
-        width: 322px
-  .history
-    &-slider
-      margin: 0
 @media (max-width: 767px)
   .container
     &-reviews
       max-width: 90%
       min-height: 450px
+    &-history
+      max-width: 100%
+      padding: 47px 20px
   .collection
     &-gallery
       width: 290px
@@ -349,6 +355,42 @@
       max-width: 240px
       max-height: 441px
       width: 100%
+  .history
+    &-cards
+      &__item
+        width: 280px
+        height: 407px
+      &__image
+        &--wide, &--normal
+          display: none
+        &--narrow
+          display: flex
+      &__legend
+        width: 270px
+        height: 150px
+      &-title
+        font-style: normal
+        font-weight: 500
+        font-size: 20px
+        line-height: 24px
+        letter-spacing: 0.2px
+        margin: 20px 20px 0 20px
+      &-more
+        font-style: normal
+        font-weight: 600
+        font-size: 16px
+        line-height: 22px
+    &-slider
+      display: none
+      &-narrow
+        height: 839px
+        width: 280px
+        display: flex
+  .swiper
+    &-slide
+      &-history
+        height: calc((100% - 24px) / 2)
+        overflow: hidden
 @media (max-width: 576px)
   .container
     &-navbar
@@ -443,6 +485,37 @@
           display: none
         &--narrow
           display: flex
+  .history
+    &-info
+      &-badge
+        padding: 6px 8px
+      &-title
+        &--wide, &--normal
+          display: none
+        &--narrow
+          display: flex
+          font-style: normal
+          font-weight: bold
+          font-size: 28px
+          line-height: 36px
+          text-align: center
+          letter-spacing: 0.2px
+      &-text
+        &--wide, &--normal
+          display: none
+        &--narrow
+          display: flex
+          font-style: normal
+          font-weight: normal
+          font-size: 16px
+          line-height: 28px
+          text-align: center
+      &-buttons
+        width: 112px
+        height: 48px
+        &__image
+          width: 48px
+          height: 48px
 @media (max-width: 440px)
   .trends
     &-cards
@@ -470,8 +543,10 @@
       min-height: 555px
       max-width: 280px
       margin: -117px auto 80px
+    &-history
+      padding: 0
   .main
-    margin-top: 86px
+    margin-top: 70px
     &-image
       object-position: 80% top
       transform: none
@@ -586,6 +661,23 @@
   .swiper
     &-pagination
       bottom: 0
+  .history
+    &-info
+      min-height: 268px
+      padding: 26px 0 0 0
+      margin: 0 0 99px 0
+      &-badge
+        width: 94px
+        height: 24px
+        padding: 4px
+      &-title
+        &--narrow
+          margin: 24px auto 4px
+    &-cards
+      &-title
+        margin: 20px 10px -16px 20px
+      &__image
+        max-height: 277px
 @media only screen and (max-device-height: 750px) and (orientation: landscape)
   .container
     &-navbar
