--- a/sass/blocks/_history.sass
+++ b/sass/blocks/_history.sass
@@ -72,7 +72,17 @@
       &:first-child
         margin-right: 18px
     &__image
+      max-height: 317px
+      width: 100%
+      height: 100%
+      object-fit: cover
+      object-position: top
+      border-radius: 8px 8px 0px 0px
       &--normal, &--narrow
+        width: 270px
+        height: 270px
+        object-fit: cover
+        object-position: top
         display: none
     &__legend
       width: 312px
@@ -108,6 +118,8 @@
     width: 686px
     height: 450px
     margin: 0 0 0 10px
+    &-narrow
+      display: none
     &__item
       /*max-width: 710px*/
       width: 100%
