added: adaptive layout

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -121,11 +121,6 @@
       margin: -73px 0 0 0
       &__item
         width: 332px
-      &__image
-        &--wide, &--narrow
-          display: none
-        &--normal
-          display: flex
       &__legend
         width: 322px
   .history
@@ -302,6 +297,10 @@
   .swiper
     &-pagination
       bottom: 7px
+  .history
+    &-cards
+      &__image
+        width: 322px
 @media (max-width: 767px)
   .container
     &-reviews
@@ -361,6 +360,7 @@
         width: 280px
         height: 407px
       &__image
+        width: 270px
         &--wide, &--normal
           display: none
         &--narrow
@@ -546,7 +546,7 @@
     &-history
       padding: 0
   .main
-    margin-top: 70px
+    margin-top: 86px
     &-image
       object-position: 80% top
       transform: none
@@ -664,7 +664,7 @@
   .history
     &-info
       min-height: 268px
-      padding: 26px 0 0 0
+      padding: 29px 0 0 0
       margin: 0 0 99px 0
       &-badge
         width: 94px
