added: handling slider buttons

--- a/sass/blocks/_history.sass
+++ b/sass/blocks/_history.sass
@@ -56,6 +56,8 @@
       &__image
         width: 56px
         height: 56px
+        &--right
+          fill: red
   &-cards
     width: 677px
     min-height: 475px
