--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -64,3 +64,8 @@ body
     flex-direction: row
     justify-content: space-between
     align-items: end
+.button
+  &-on
+    filter: brightness(0) saturate(100%) invert(19%) sepia(8%) saturate(3867%) hue-rotate(165deg) brightness(95%) contrast(93%)
+  &-off
+    invert(73%) sepia(15%) saturate(259%) hue-rotate(178deg) brightness(83%) contrast(95%)
