--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,7 @@
 @import 'blocks/_reviews'
 // Стили для блока history
 @import 'blocks/_history'
+// Стили для блока newsletter
+@import 'blocks/_newsletter'
 // Подключение стилей для адаптива
 @import 'media'
