--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -69,3 +69,13 @@ body
     filter: brightness(0) saturate(100%) invert(19%) sepia(8%) saturate(3867%) hue-rotate(165deg) brightness(95%) contrast(93%)
   &-off
     filter: brightness(0) saturate(100%) invert(73%) sepia(15%) saturate(259%) hue-rotate(178deg) brightness(83%) contrast(95%)
+.invalid
+  color: $primary
+  border-bottom: 1px solid $primary
+label.invalid
+  position: absolute
+  bottom: -12px
+  font-size: 12px
+  line-height: 12px
+  border-bottom: none
+  color: #FFFFFF
