--- a/sass/blocks/_history.sass
+++ b/sass/blocks/_history.sass
@@ -72,6 +72,7 @@
       &:first-child
         margin-right: 18px
     &__image
+      width: 312px
       max-height: 317px
       height: 100%
       object-fit: cover
