--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -37,6 +37,8 @@
       color: #FFFFFF
       padding-left: 150px
       margin-top: 5px
+      &--narrow
+        display: none
   &-block
     display: flex
     flex-basis: 48%
