added: footer&adaptive layout 1440px

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -64,6 +64,21 @@ body
     flex-direction: row
     justify-content: space-between
     align-items: end
+  &-thanks
+    max-width: 1150px
+    min-height: 606px
+    padding: 0
+    margin: 65px auto 80px
+    overflow: hidden
+    position: relative
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: end
+  &-footer
+    max-width: 100%
+    min-height: 520px
+
 .button
   &-on
     filter: brightness(0) saturate(100%) invert(19%) sepia(8%) saturate(3867%) hue-rotate(165deg) brightness(95%) contrast(93%)
