--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,5 +20,9 @@
 @import 'blocks/_history'
 // Стили для блока newsletter
 @import 'blocks/_newsletter'
+// Стили для блока thanks
+@import 'blocks/_thanks'
+// Стили для блока footer
+@import 'blocks/_footer'
 // Подключение стилей для адаптива
 @import 'media'
