--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -10,9 +10,17 @@
   display: flex
   flex-direction: row
   margin-top: 140px
-  &-title
+  justify-content: center
+  &-wrapper
+    width: 1076px
     display: flex
-    flex-basis: 48%
+    padding: 0
+    margin: 0 59px 0 0
+    justify-content: space-between
+  &-title
+    width: 436px
+    display: flex
+    /*flex-basis: 48%*/
     flex-direction: column
     justify-content: center
     align-items: flex-start
@@ -25,8 +33,8 @@
       letter-spacing: 0.2px
       color: #FFFFFF
       margin-bottom: 14px
-      margin-top: -10px
-      padding-left: 150px
+      margin-top: -6px
+      /*padding-left: 150px*/
     &-text
       /*width: 436px*/
       height: 64px
@@ -35,18 +43,18 @@
       font-size: 18px
       line-height: 32px
       color: #FFFFFF
-      padding-left: 150px
+      /*padding-left: 150px*/
       margin-top: 5px
       &--narrow
         display: none
   &-block
+    width: 447px
     display: flex
-    flex-basis: 48%
+    /*flex-basis: 48%*/
     flex-direction: column
     justify-content: center
     align-items: center
   &__subscribe
-    margin-left: -67px
 .subscribe
   &__input
     width: 100%
