--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -25,6 +25,9 @@
         width: 42px
         height: 42px
         margin-right: 2px
+        cursor: pointer
+        &:hover
+          filter: brightness(0) saturate(100%) invert(19%) sepia(8%) saturate(3867%) hue-rotate(165deg) brightness(95%) contrast(93%)
     &-title
       font-style: normal
       font-weight: bold
@@ -42,6 +45,10 @@
         line-height: 22px
         color: $primary
         margin-bottom: 24px
+        cursor: pointer
+        &:hover
+          /*text-shadow: 1px 1px 1px black, 0 0 0.1em $primary*/
+          text-decoration: underline
     &-navigation
       width: 165px
       margin-right: 30px
